Logo modificado. Puesta a punto para iniciar la limpieza de código

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Proyecto editor de código en vivo para los alumnos",
   "main": "app.js",
   "scripts": {
-    "test": "nodemon ./src/app.js -e js,mjs,json,ejs,css",
+    "test": "nodemon ./src/app.js -e js,mjs,ejs,css",
     "start": "node ./src/app.js"
   },
   "repository": {
